deploy: 34db3e4a89d0152902ed10da5cd8d3dce8fddafe

--- a/deploy-frontend-admin.html
+++ b/deploy-frontend-admin.html
@@ -166,15 +166,15 @@
                         <h1><a class="header" href="#部署前端admin" id="部署前端admin">部署前端admin</a></h1>
 <h2><a class="header" href="#编译" id="编译">编译</a></h2>
 <p>根据需要修改vue.config.js的publicPath</p>
-<pre><code class="language-json">publicPath: '/wp-admin',
+<pre><code class="language-json">publicPath: '/',
 </code></pre>
 <pre><code class="language-bash">cd mhgoi-blog/frontend/admin
 
 npm run build
 </code></pre>
 <h2><a class="header" href="#发布" id="发布">发布</a></h2>
-<pre><code class="language-bash">mkdir -p /usr/share/nginx/html/wp-admin
-cp dist/* /usr/share/nginx/html/wp-admin
+<pre><code class="language-bash">mkdir -p /data/www/adminblog.mhgoi.net/html
+cp dist/* /data/www/adminblog.mhgoi.net/html
 </code></pre>
 
                     </main>
