--- a/deploy-frontend-web.html
+++ b/deploy-frontend-web.html
@@ -173,7 +173,8 @@
 npm run build
 </code></pre>
 <h2><a class="header" href="#发布" id="发布">发布</a></h2>
-<pre><code class="language-bash">cp dist/* /usr/share/nginx/html/
+<pre><code class="language-bash">mkdir -p /data/www/blog.mhgoi.net/html
+cp dist/* /data/www/blog.mhgoi.net/html
 </code></pre>
 
                     </main>
