deploy: f8f4c92484d537810ba83e7c7c3eefbed79d45ad

--- a/import-mysql.html
+++ b/import-mysql.html
@@ -174,6 +174,16 @@ CREATE USER 'jack'@'%' IDENTIFIED BY '666666';
 GRANT ALL PRIVILEGES ON *.* TO 'jack'@'%';
 FLUSH PRIVILEGES;
 </code></pre>
+<table><thead><tr><th>database-version</th><th>remark</th><th>sql</th></tr></thead><tbody>
+<tr><td>mysql5.7</td><td>only schema</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-schema-mysql57.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-schema-mysql57.sql</a></td></tr>
+<tr><td>mysql5.7</td><td>only data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-data-mysql57.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-data-mysql57.sql</a></td></tr>
+<tr><td>mysql5.7</td><td>scheme and data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-mysql57.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-mysql57.sql</a></td></tr>
+</tbody></table>
+<table><thead><tr><th>database-version</th><th>remark</th><th>sql</th></tr></thead><tbody>
+<tr><td>mysql8</td><td>only schema</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-schema-mysql8.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-schema-mysql8.sql</a></td></tr>
+<tr><td>mysql8</td><td>only data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-data-mysql8.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-data-mysql8.sql</a></td></tr>
+<tr><td>mysql8</td><td>scheme and data</td><td><a href="https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-mysql8.sql">https://github.com/dyrnq/mhgoi-blog-deploy/tree/main/sql/mysql/mysql-mysql8.sql</a></td></tr>
+</tbody></table>
 
                     </main>
 
