--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
 <img src="https://img.shields.io/badge/springboot-2.3.9.RELEASE-green">
 <img src="https://img.shields.io/badge/vue-%5E%3D2.6.11-blue" />
 <h1><a class="header" href="#项目仓库" id="项目仓库">项目仓库</a></h1>
-<p><a href="http://github.com/dyrnq/mhgoi-blog"><img src="./img/github-logo-1.png" alt="github" title="github" /></a></p>
-<p><a href="http://github.com/dyrnq/mhgoi-blog">http://github.com/dyrnq/mhgoi-blog</a></p>
-<p><a href="http://gitee.com/dyrnq/mhgoi-blog"><img src="./img/gitee.svg" alt="gitee" title="gitee" /></a></p>
-<p><a href="http://gitee.com/dyrnq/mhgoi-blog">http://gitee.com/dyrnq/mhgoi-blog</a></p>
+<p><a href="https://github.com/dyrnq/mhgoi-blog"><img src="./img/github-logo-1.png" alt="github" title="github" /></a></p>
+<p><a href="https://github.com/dyrnq/mhgoi-blog">http://github.com/dyrnq/mhgoi-blog</a></p>
+<p><a href="https://gitee.com/dyrnq/mhgoi-blog"><img src="./img/gitee.svg" alt="gitee" title="gitee" /></a></p>
+<p><a href="https://gitee.com/dyrnq/mhgoi-blog">http://gitee.com/dyrnq/mhgoi-blog</a></p>
 
                     </main>
 
