deploy: 0108a85355f1b9ef6f22745834b9cf63a85d4d4d

--- a/dev-install-jdk.html
+++ b/dev-install-jdk.html
@@ -163,7 +163,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#adoptopenjdk下载" id="adoptopenjdk下载">AdoptOpenJDK下载</a></h1>
+                        <h1><a class="header" href="#adoptopenjdk" id="adoptopenjdk">AdoptOpenJDK</a></h1>
 <p>从<a href="https://adoptopenjdk.net/">https://adoptopenjdk.net/</a>下载AdoptOpenJDK。也可以从清华TUNA镜像下载，根据自己的平台选择下载jdk</p>
 <ul>
 <li><a href="https://mirrors.tuna.tsinghua.edu.cn/AdoptOpenJDK/11/jdk/x64/linux/">https://mirrors.tuna.tsinghua.edu.cn/AdoptOpenJDK/11/jdk/x64/linux/</a></li>
