--- a/dev-install-maven.html
+++ b/dev-install-maven.html
@@ -163,7 +163,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#maven下载" id="maven下载">maven下载</a></h1>
+                        <h1><a class="header" href="#maven" id="maven">maven</a></h1>
 <h2><a class="header" href="#下载" id="下载">下载</a></h2>
 <p>从<a href="https://mirrors.tuna.tsinghua.edu.cn/apache/maven/maven-3/">https://mirrors.tuna.tsinghua.edu.cn/apache/maven/maven-3/</a>下载个maven包。</p>
 <p><a href="https://mirrors.tuna.tsinghua.edu.cn/apache/maven/maven-3/3.6.3/binaries/apache-maven-3.6.3-bin.tar.gz">https://mirrors.tuna.tsinghua.edu.cn/apache/maven/maven-3/3.6.3/binaries/apache-maven-3.6.3-bin.tar.gz</a></p>
