deploy: d5151f6ea4b6503c2b25491608bd6163e8744d18

--- a/deploy-artalk.html
+++ b/deploy-artalk.html
@@ -163,7 +163,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#评论组件" id="评论组件">评论组件</a></h2>
+                        <h1><a class="header" href="#artalk评论组件" id="artalk评论组件">Artalk评论组件</a></h1>
+<h2><a class="header" href="#artalk简介" id="artalk简介">Artalk简介</a></h2>
 <blockquote>
 <p>评论组件基于<a href="https://github.com/ArtalkJS/Artalk">https://github.com/ArtalkJS/Artalk</a></p>
 </blockquote>
