--- a/deploy-nginx.html
+++ b/deploy-nginx.html
@@ -163,7 +163,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#安装nginx" id="安装nginx">安装nginx</a></h2>
+                        <h1><a class="header" href="#nginx部署" id="nginx部署">Nginx部署</a></h1>
+<h2><a class="header" href="#安装nginx" id="安装nginx">安装nginx</a></h2>
 <blockquote>
 <p>参考  <a href="http://nginx.org/en/docs/install.html">http://nginx.org/en/docs/install.html</a></p>
 </blockquote>
