--- a/dev-install-git.html
+++ b/dev-install-git.html
@@ -163,7 +163,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#安装git" id="安装git">安装git</a></h2>
+                        <h1><a class="header" href="#git" id="git">Git</a></h1>
+<h2><a class="header" href="#git-1" id="git-1">git</a></h2>
 <pre><code class="language-bash"># debian ubuntu
 apt install git
 
@@ -173,9 +174,9 @@ yum install git
 # mac
 # https://git-scm.com/book/zh/v2/%E8%B5%B7%E6%AD%A5-%E5%AE%89%E8%A3%85-Git
 </code></pre>
-<h2><a class="header" href="#安装githubdesktop" id="安装githubdesktop">安装GithubDesktop</a></h2>
+<h2><a class="header" href="#githubdesktop" id="githubdesktop">GithubDesktop</a></h2>
 <p><a href="https://desktop.github.com/">https://desktop.github.com/</a></p>
-<h2><a class="header" href="#安装github-cli可选" id="安装github-cli可选">安装Github cli(可选)</a></h2>
+<h2><a class="header" href="#github-cli可选" id="github-cli可选">Github cli(可选)</a></h2>
 <p><a href="https://github.com/cli/cli">https://github.com/cli/cli</a></p>
 
                     </main>
