--- a/dev-install-nodejs.html
+++ b/dev-install-nodejs.html
@@ -163,7 +163,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#下载nodejs" id="下载nodejs">下载nodejs</a></h2>
+                        <h1><a class="header" href="#nodejs" id="nodejs">nodejs</a></h1>
+<h2><a class="header" href="#下载nodejs" id="下载nodejs">下载nodejs</a></h2>
 <p>从<a href="https://nodejs.org/">https://nodejs.org/</a>下载nodejs</p>
 <p><img src="img/install-nodejs.png" alt="install-nodejs" /></p>
 <p>下载解压缩后,配置好NODE_HOME和PATH变量，然后执行<code>node --version</code>查看java版本</p>
