--- a/dev-vm-natnetwork-config.html
+++ b/dev-vm-natnetwork-config.html
@@ -163,7 +163,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#vm-nat网络配置" id="vm-nat网络配置">vm-nat网络配置</a></h2>
+                        <h1><a class="header" href="#vm-nat网络配置" id="vm-nat网络配置">vm-nat网络配置</a></h1>
+<h2><a class="header" href="#虚拟机端口映射" id="虚拟机端口映射">虚拟机端口映射</a></h2>
 <p>在使用vm作为开发测试机的时候首先碰到的问题，就是部署在虚拟机里的服务，比如mysql，怎样在host主机访问呢？</p>
 <p>首先整理下概念</p>
 <ul>
