--- a/ops-install-database-postgresql.html
+++ b/ops-install-database-postgresql.html
@@ -163,7 +163,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#postgresql-11x" id="postgresql-11x">postgresql-11.x</a></h2>
+                        <h1><a class="header" href="#postgresql" id="postgresql">postgresql</a></h1>
+<h2><a class="header" href="#postgresql-11x" id="postgresql-11x">postgresql-11.x</a></h2>
 <pre><code class="language-bash">mkdir -p /data/lib/postgres11;
 docker run -d --name postgres11 \
 --restart always \
