--- a/dev-install-eclipse.html
+++ b/dev-install-eclipse.html
@@ -163,7 +163,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#下载eclipse" id="下载eclipse">下载Eclipse</a></h2>
+                        <h1><a class="header" href="#eclipse" id="eclipse">Eclipse</a></h1>
+<h2><a class="header" href="#下载eclipse" id="下载eclipse">下载Eclipse</a></h2>
 <p>从<a href="https://www.eclipse.org/downloads/packages/">https://www.eclipse.org/downloads/packages/</a>下载<code>Eclipse IDE for Java Developers</code></p>
 <p><img src="./img/download-eclipse.png" alt="download-eclipse" /></p>
 <h2><a class="header" href="#下载lombok" id="下载lombok">下载lombok</a></h2>
