--- a/ops-install-database-mariadb.html
+++ b/ops-install-database-mariadb.html
@@ -163,7 +163,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#mariadb-105x" id="mariadb-105x">mariadb-10.5.x</a></h2>
+                        <h1><a class="header" href="#mariadb" id="mariadb">mariadb</a></h1>
+<h2><a class="header" href="#mariadb-105x" id="mariadb-105x">mariadb-10.5.x</a></h2>
 <pre><code class="language-bash">mkdir -p /data/lib/mariadb10;
 docker run -d --name mariadb10 \
 --restart always \
