--- a/ops-install-database-mysql.html
+++ b/ops-install-database-mysql.html
@@ -163,7 +163,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#mysql-57x" id="mysql-57x">mysql-5.7.x</a></h2>
+                        <h1><a class="header" href="#mysql" id="mysql">mysql</a></h1>
+<h2><a class="header" href="#mysql-57x" id="mysql-57x">mysql-5.7.x</a></h2>
 <pre><code class="language-bash">mkdir -p /data/lib/mysql57;
 docker run -d --name mysql57 \
 --restart always \
