deploy: 146a759d00e7f8fa8beb9afa6c228dc995086f3d

--- a/print.html
+++ b/print.html
@@ -922,15 +922,15 @@ journalctl -k --no-pager |grep -Ei &quot;oom|kill|error|java&quot;
 </code></pre>
 <h2><a class="header" href="#ref-2" id="ref-2">ref</a></h2>
 <ul>
-<li>https://visualvm.github.io/download.html</li>
+<li><a href="https://visualvm.github.io/download.html">https://visualvm.github.io/download.html</a></li>
 <li><a href="https://github.com/fabric8io-images/run-java-sh">https://github.com/fabric8io-images/run-java-sh</a></li>
-<li>https://github.com/bcicen/ctop/releases/download/v0.7.5/ctop-0.7.5-linux-amd64</li>
-<li>https://dzone.com/articles/jvm-tuning-using-jcmd</li>
-<li>https://foojay.io/command-line-arguments/openjdk-11/?tab=alloptions</li>
-<li>https://chriswhocodes.com/hotspot_options_openjdk11.html</li>
-<li>https://www.google.com/search?q=JVM+Diagnostics</li>
-<li>https://www.google.com/search?q=JVM+Performance+Tuning</li>
-<li>https://www.google.com/search?q=Java+Optimization</li>
+<li><a href="https://github.com/bcicen/ctop/releases/download/v0.7.5/ctop-0.7.5-linux-amd64">https://github.com/bcicen/ctop/releases/download/v0.7.5/ctop-0.7.5-linux-amd64</a></li>
+<li><a href="https://dzone.com/articles/jvm-tuning-using-jcmd">https://dzone.com/articles/jvm-tuning-using-jcmd</a></li>
+<li><a href="https://foojay.io/command-line-arguments/openjdk-11/?tab=alloptions">https://foojay.io/command-line-arguments/openjdk-11/?tab=alloptions</a></li>
+<li><a href="https://chriswhocodes.com/hotspot_options_openjdk11.html">https://chriswhocodes.com/hotspot_options_openjdk11.html</a></li>
+<li><a href="https://www.google.com/search?q=JVM+Diagnostics">https://www.google.com/search?q=JVM+Diagnostics</a></li>
+<li><a href="https://www.google.com/search?q=JVM+Performance+Tuning">https://www.google.com/search?q=JVM+Performance+Tuning</a></li>
+<li><a href="https://www.google.com/search?q=Java+Optimization">https://www.google.com/search?q=Java+Optimization</a></li>
 </ul>
 <h1><a class="header" href="#artalk评论组件" id="artalk评论组件">Artalk评论组件</a></h1>
 <h2><a class="header" href="#artalk简介" id="artalk简介">Artalk简介</a></h2>
