deploy: c9b64aeee7bf73edcfeb35feb73810ae81ba8e54

--- a/deploy-artalk.html
+++ b/deploy-artalk.html
@@ -168,7 +168,7 @@
 <blockquote>
 <p>评论组件基于<a href="https://github.com/ArtalkJS/Artalk">https://github.com/ArtalkJS/Artalk</a></p>
 </blockquote>
-<p>我们需要部署他的服务端<a href="https://github.com/ArtalkJS/Artalk-API-PHP">https://github.com/ArtalkJS/Artalk-API-PHP</a></p>
+<p>需要部署他的服务端<a href="https://github.com/ArtalkJS/Artalk-API-PHP">https://github.com/ArtalkJS/Artalk-API-PHP</a></p>
 <pre><code class="language-bash"># https://github.com/ArtalkJS/Artalk-API-PHP/blob/master/Config.example.php
 wget --no-check-certificate --output-file Config.php https://raw.githubusercontent.com/ArtalkJS/Artalk-API-PHP/master/Config.example.php
 
