--- a/dev-frontend-admin.html
+++ b/dev-frontend-admin.html
@@ -170,8 +170,13 @@
 <h2><a class="header" href="#运行" id="运行">运行</a></h2>
 <pre><code class="language-bash">cd mhgoi-blog/frontend/admin
 
+# 只需运行一次 run install
 npm run install
+
 npm run dev
+</code></pre>
+<h2><a class="header" href="#默认端口" id="默认端口">默认端口</a></h2>
+<pre><code class="language-bash">:9999
 </code></pre>
 <h2><a class="header" href="#build" id="build">build</a></h2>
 <pre><code class="language-bash">npm run build
