--- a/ops-install-adminer.html
+++ b/ops-install-adminer.html
@@ -164,7 +164,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#adminer" id="adminer">Adminer</a></h1>
-<p>Adminer 是一个替换 phpMyAdmin 的数据库管理基面,可以用来导出、导入数据库、执行sql等操作，我们使用<code>docker run</code>快速安装</p>
+<p>Adminer 是一个替换 phpMyAdmin 的数据库管理基面,可以用来导出、导入数据库、执行sql等操作，使用<code>docker run</code>快速安装</p>
 <pre><code class="language-bash">docker run -d --name=adminer \
 --restart always \
 --network mynet \
