--- a/ops-install-database.html
+++ b/ops-install-database.html
@@ -164,7 +164,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#数据库" id="数据库">数据库</a></h1>
-<p>数据库我们使用<code>docker run</code>快速安装，以下命令为示范命令，可以选择其中一个</p>
+<p>数据库使用<code>docker run</code>快速安装，以下命令为示范命令，可以选择其中一个</p>
 <ul>
 <li><a href="ops-install-database-mysql.html">mysql</a></li>
 <li><a href="ops-install-database-mariadb.html">mariadb</a></li>
