--- a/ops-install-redis.html
+++ b/ops-install-redis.html
@@ -164,7 +164,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#redis" id="redis">redis</a></h1>
-<p>redis我们使用<code>docker run</code>快速安装</p>
+<p>redis使用<code>docker run</code>快速安装</p>
 <pre><code class="language-bash">docker run -d --name=redis \
 --restart always \
 --network mynet \
