--- a/print.html
+++ b/print.html
@@ -300,7 +300,7 @@ OS name: &quot;linux&quot;, version: &quot;4.19.0-13-amd64&quot;, arch: &quot;am
 <pre><code class="language-bash">java -jar lombok.jar
 </code></pre>
 <p><img src="./img/install-lombok.png" alt="install-lombok" /></p>
-<p>如果提示<code>Can't find IDE</code>,我们需要选择手工选择Eclipse的安装路径(上图的Specify location)，再点击install！</p>
+<p>如果提示<code>Can't find IDE</code>,则需要选择手工选择Eclipse的安装路径(上图的Specify location)，再点击install！</p>
 <h2><a class="header" href="#配置maven" id="配置maven">配置maven</a></h2>
 <p>这一步是统一命令行(shell)中使用mvn和Eclipse中maven使用相同的设置</p>
 <p><img src="./img/eclipse-maven.png" alt="eclipse-maven" /></p>
@@ -360,7 +360,7 @@ npm cache clean -f
 </ul>
 <h1><a class="header" href="#vagrant" id="vagrant">Vagrant</a></h1>
 <p>Vagrant可以理解为针对虚拟机的<code>docker</code>，可以方便拉取别人制作好的虚机镜像后启动一个虚拟机实例。</p>
-<p>通常我们可以不用自己安装虚机，可以像<code>docker pull</code>一样从Vagrant的app仓库拉取操作系统官方制作好的box（镜像），ubuntu和centos都有官方自己制作的镜像。</p>
+<p>通常可以不用自己安装虚机，可以像<code>docker pull</code>一样从Vagrant的app仓库拉取操作系统官方制作好的box（镜像），ubuntu和centos都有官方自己制作的镜像。</p>
 <p>Vagrant不仅可以操控virtualbox，还可以操控vmware等其他虚拟化方案。</p>
 <h2><a class="header" href="#install-1" id="install-1">install</a></h2>
 <p>文档 <a href="https://www.vagrantup.com/downloads">https://www.vagrantup.com/downloads</a></p>
@@ -370,7 +370,7 @@ npm cache clean -f
 <h2><a class="header" href="#下载vbox镜像" id="下载vbox镜像">下载vbox镜像</a></h2>
 <p>为本地仓库添加box方法有2种，box是vagrant的镜像。</p>
 <ul>
-<li>一种是先使用curl或者wget等工具下载镜像，再添加。</li>
+<li>第一种方法是先使用curl或者wget等工具下载镜像，再添加。<font color=red size=3>推荐</font></li>
 </ul>
 <pre><code class="language-bash">## .box文件比较大，也可以下载下来，再调用vagrant box add
 wget --tries 100 --continue --output-document debian10.box  https://app.vagrantup.com/debian/boxes/buster64/versions/10.4.0/providers/virtualbox.box
@@ -378,7 +378,7 @@ wget --tries 100 --continue --output-document debian10.box  https://app.vagrantu
 vagrant box add debian10 ./debian10.box
 </code></pre>
 <ul>
-<li>另外可以通过<code>vagrant box add</code> 命令后边+box的http地址。</li>
+<li>第二种方法可以通过<code>vagrant box add</code> 命令后边+box的http地址。</li>
 </ul>
 <pre><code class="language-bash"># debian buster64
 vagrant box add debian10 https://app.vagrantup.com/debian/boxes/buster64/versions/10.4.0/providers/virtualbox.box
@@ -471,7 +471,7 @@ end
 <pre><code class="language-bash">vagrant up n11
 vagrant ssh n11
 </code></pre>
-<p><font color=red size=3>使用Vagrant的好处是可以快速的重新获取一个全新的既定的vm</font>，比如我用下边这条语句</p>
+<p><font color=red size=3>使用Vagrant的好处是可以快速的重新获取一个全新的既定的vm</font>，比如用下边这条语句</p>
 <pre><code class="language-bash">vagrant destroy n11 -f &amp;&amp; vagrant up n11 &amp;&amp; vagrant ssh n11 
 </code></pre>
 <p>表示强制销毁n11----&gt;重新建立n11----&gt;ssh登录到n11</p>
@@ -494,11 +494,11 @@ vagrant ssh n11
 <p><img src="./img/vm-network1.png" alt="vm-network1" /></p>
 <p><img src="./img/vm-network2.png" alt="vm-network2" /></p>
 <p>其中每一行是一个端口映射，主机IP固定写0.0.0.0，子系统IP不用写。主机端口写映射到主机的端口，子系统端口写虚机要映射出来的端口。</p>
-<p>比如要映射虚拟机的22端口到宿主机，这里由于宿主机的22端口被宿主机的sshd占用了，所以这里不能再用22端口映射，所以改成了18222</p>
-<table><thead><tr><th>主机IP</th><th>主机IP</th><th>子系统IP</th><th>子系统端口</th></tr></thead><tbody>
-<tr><td>0.0.0.0</td><td>18222</td><td></td><td>22</td></tr>
+<p>比如要映射虚拟机的22端口到宿主机，这里由于宿主机的22端口被宿主机的sshd占用了，所以这里不能再用22端口映射，所以改成了28222</p>
+<table><thead><tr><th>名称</th><th>协议</th><th>主机IP</th><th>主机端口</th><th>子系统IP</th><th>子系统端口</th></tr></thead><tbody>
+<tr><td>Rule1</td><td>TCP</td><td>0.0.0.0</td><td>28222</td><td></td><td>22</td></tr>
 </tbody></table>
-<p>这样在宿主机上通过<code>ssh tom@127.0.0.1 -p 18222</code> 这条命令就连到虚拟机的ssh了。</p>
+<p>这样在宿主机上通过<code>ssh tom@127.0.0.1 -p 28222</code> 这条命令就连到虚拟机的ssh了。</p>
 <p>以此类推，其他3306、6379等端口也可以从虚拟机映射到宿主机，如果宿主机已经占用了端口那么就改个未被占用的端口，自行记录对应关系。</p>
 <h2><a class="header" href="#docker容器端口映射" id="docker容器端口映射">docker容器端口映射</a></h2>
 <p>以此类推，如果在vm中起docker容器，首先要把容器的端口映射出来。</p>
@@ -530,7 +530,7 @@ vagrant ssh n11
 <li>可以考虑在mac或者window上安装一个VirtualBox或者VMware来启动一个linux虚拟机，然后再在这个linux虚拟机中再安装Docker。</li>
 </ul>
 <h1><a class="header" href="#数据库" id="数据库">数据库</a></h1>
-<p>数据库我们使用<code>docker run</code>快速安装，以下命令为示范命令，可以选择其中一个</p>
+<p>数据库使用<code>docker run</code>快速安装，以下命令为示范命令，可以选择其中一个</p>
 <ul>
 <li><a href="ops-install-database-mysql.html">mysql</a></li>
 <li><a href="ops-install-database-mariadb.html">mariadb</a></li>
@@ -667,7 +667,7 @@ cockroach sql --host=cockroach:26257 --certs-dir=/opt/certs -e &quot;use mhgoi_b
 cockroach sql --host=cockroach:26257 --certs-dir=/opt/certs -e &quot;GRANT ALL ON TABLE mhgoi_blog.public.* TO jack;&quot;
 </code></pre>
 <h1><a class="header" href="#redis" id="redis">redis</a></h1>
-<p>redis我们使用<code>docker run</code>快速安装</p>
+<p>redis使用<code>docker run</code>快速安装</p>
 <pre><code class="language-bash">docker run -d --name=redis \
 --restart always \
 --network mynet \
@@ -675,7 +675,7 @@ cockroach sql --host=cockroach:26257 --certs-dir=/opt/certs -e &quot;GRANT ALL O
 redis:5.0.10
 </code></pre>
 <h1><a class="header" href="#adminer" id="adminer">Adminer</a></h1>
-<p>Adminer 是一个替换 phpMyAdmin 的数据库管理基面,可以用来导出、导入数据库、执行sql等操作，我们使用<code>docker run</code>快速安装</p>
+<p>Adminer 是一个替换 phpMyAdmin 的数据库管理基面,可以用来导出、导入数据库、执行sql等操作，使用<code>docker run</code>快速安装</p>
 <pre><code class="language-bash">docker run -d --name=adminer \
 --restart always \
 --network mynet \
@@ -766,8 +766,13 @@ ln -s ${MAVEN_HOME}/conf/settings.xml ~/.m2/settings.xml
 <h2><a class="header" href="#运行-1" id="运行-1">运行</a></h2>
 <pre><code class="language-bash">cd mhgoi-blog/frontend/admin
 
+# 只需运行一次 run install
 npm run install
+
 npm run dev
+</code></pre>
+<h2><a class="header" href="#默认端口" id="默认端口">默认端口</a></h2>
+<pre><code class="language-bash">:9999
 </code></pre>
 <h2><a class="header" href="#build" id="build">build</a></h2>
 <pre><code class="language-bash">npm run build
@@ -779,8 +784,13 @@ npm run dev
 <h2><a class="header" href="#运行-2" id="运行-2">运行</a></h2>
 <pre><code class="language-bash">cd mhgoi-blog/frontend/web
 
+# 只需运行一次 run install
 npm run install
+
 npm run dev
+</code></pre>
+<h2><a class="header" href="#默认端口-1" id="默认端口-1">默认端口</a></h2>
+<pre><code class="language-bash">:8888
 </code></pre>
 <h2><a class="header" href="#build-1" id="build-1">build</a></h2>
 <pre><code class="language-bash">npm run build
@@ -937,7 +947,7 @@ journalctl -k --no-pager |grep -Ei &quot;oom|kill|error|java&quot;
 <blockquote>
 <p>评论组件基于<a href="https://github.com/ArtalkJS/Artalk">https://github.com/ArtalkJS/Artalk</a></p>
 </blockquote>
-<p>我们需要部署他的服务端<a href="https://github.com/ArtalkJS/Artalk-API-PHP">https://github.com/ArtalkJS/Artalk-API-PHP</a></p>
+<p>需要部署他的服务端<a href="https://github.com/ArtalkJS/Artalk-API-PHP">https://github.com/ArtalkJS/Artalk-API-PHP</a></p>
 <pre><code class="language-bash"># https://github.com/ArtalkJS/Artalk-API-PHP/blob/master/Config.example.php
 wget --no-check-certificate --output-file Config.php https://raw.githubusercontent.com/ArtalkJS/Artalk-API-PHP/master/Config.example.php
 
@@ -958,9 +968,6 @@ docker run -d --name artalkserverphp \
 </ul>
 <h1><a class="header" href="#部署前端admin" id="部署前端admin">部署前端admin</a></h1>
 <h2><a class="header" href="#编译-1" id="编译-1">编译</a></h2>
-<p>根据需要修改vue.config.js的publicPath</p>
-<pre><code class="language-json">publicPath: '/',
-</code></pre>
 <pre><code class="language-bash">cd mhgoi-blog/frontend/admin
 
 npm run build
@@ -971,9 +978,6 @@ cp dist/* /data/www/adminblog.mhgoi.net/html
 </code></pre>
 <h1><a class="header" href="#部署前端web" id="部署前端web">部署前端web</a></h1>
 <h2><a class="header" href="#编译-2" id="编译-2">编译</a></h2>
-<p>根据需要修改vue.config.js的publicPath</p>
-<pre><code class="language-json">publicPath: '/',
-</code></pre>
 <pre><code class="language-bash">cd mhgoi-blog/frontend/web
 
 npm run build
