deploy: 52c244c8fcff5a8b982f2ef399a136709b518832

--- a/dev-install-git.html
+++ b/dev-install-git.html
@@ -178,6 +178,12 @@ yum install git
 <p><a href="https://desktop.github.com/">https://desktop.github.com/</a></p>
 <h2><a class="header" href="#github-cli可选" id="github-cli可选">Github cli(可选)</a></h2>
 <p><a href="https://github.com/cli/cli">https://github.com/cli/cli</a></p>
+<h2><a class="header" href="#git入门推荐" id="git入门推荐">git入门推荐</a></h2>
+<ul>
+<li><a href="https://wkevin.github.io/GitChat/gitchat.html">https://wkevin.github.io/GitChat/gitchat.html</a></li>
+<li><a href="https://backlog.com/git-tutorial/cn/">https://backlog.com/git-tutorial/cn/</a></li>
+<li><a href="https://rogerdudler.github.io/git-guide/index.zh.html">https://rogerdudler.github.io/git-guide/index.zh.html</a></li>
+</ul>
 
                     </main>
 
