--- a/ops-install-docker.html
+++ b/ops-install-docker.html
@@ -178,9 +178,15 @@
 </ul>
 <h2><a class="header" href="#开发环境" id="开发环境">开发环境</a></h2>
 <ul>
-<li><font face="黑体" color=green size=4>推荐在linux,centos7/8、debian10、ubuntu20.04等服务器操作系统上安装docker！</font></li>
-<li><font color=red size=3><em>不要在mac上或者windows直接安装docker。</em></font></li>
-<li>可以考虑在mac或者window上安装一个VirtualBox或者VMware来启动一个linux虚拟机，然后再在这个linux虚拟机中再安装Docker。</li>
+<li><font face="黑体" color=green size=4>推荐在linux,centos7/8、debian10、ubuntu20.04等linux服务器操作系统上安装docker！</font></li>
+<li><font color=red size=3><em>不推荐在mac上或windows安装docker-desktop。</em></font></li>
+<li>可以考虑在mac或window上安装一个VirtualBox或VMware来启动一个linux虚拟机，然后在这个linux虚拟机中安装docker。</li>
+</ul>
+<h2><a class="header" href="#docker入门推荐" id="docker入门推荐">docker入门推荐</a></h2>
+<ul>
+<li><a href="https://yeasy.gitbooks.io/docker_practice/">https://yeasy.gitbooks.io/docker_practice/</a></li>
+<li><a href="https://github.com/twtrubiks/docker-tutorial">https://github.com/twtrubiks/docker-tutorial</a></li>
+<li><a href="https://gist.github.com/StevenACoffman/41fee08e8782b411a4a26b9700ad7af5">https://gist.github.com/StevenACoffman/41fee08e8782b411a4a26b9700ad7af5</a></li>
 </ul>
 
                     </main>
